--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,7 +15,7 @@ jobs:
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
-                  username: ${{ secrets.DOCKER_USERNAME }}
+                  username: ${{ secrets.DOCKER_EMAIL }} # change because login by email
                   password: ${{ secrets.DOCKER_PASSWORD }}
             - name: Build and Push images
               env:
