--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,8 +15,8 @@ jobs:
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
-                  username: ${{ secrets.DOCKER_EMAIL }} # change because login by email
-                  password: ${{ secrets.DOCKER_PASSWORD }}
+                  username: ${{ secrets.DOCKER_USERNAME }} # duyanhp
+                  password: ${{ secrets.DOCKER_PASSWORD }} # pda123
             - name: Build and Push images
               env:
                   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }} # truyền vào biến trong docker-compose.yml
