--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,11 +34,11 @@ jobs:
             - name: executing remote ssh commands using password
               uses: appleboy/ssh-action@v1.2.0
               env:
-                  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+                  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }} # tạo biến DOCKER_USERNAME để sử dụng
               with:
                   host: ${{ secrets.SERVER_HOST }}
                   username: ${{ secrets.SERVER_USERNAME }}
                   key: ${{ secrets.SERVER_KEY }}
                   port: ${{ secrets.SERVER_PORT }}
-                  envs: DOCKER_USERNAME
+                  envs: DOCKER_USERNAME # dùng biến DOCKER_USERNAME
                   script_path: scripts/deploy.sh
